# cabaret

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/cabaret/: __init__.py  camera.py  image.py  observatory.py  queries.py
tests/: test_readme.py  test_simple.py
