[project]
name = "cabaret"
version = "0.0.0"
authors = [
  {name = "Peter Pedersen"},
  {name = "Lionel Garcia"},
]
description = "cabaret "
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
packages = [{ include = "spotter" },]
dependencies = ["numpy", "astopy"]

[project.urls]
Homepage = "https://github.com/ppp-one/cabaret"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cabaret"]