[project]
name = "cabaret"
version = "0.0.4"
authors = [
  {name = "Peter Pedersen"},
  {name = "Lionel Garcia"},
]
description = "cabaret"
repository = "https://github.com/ppp-one/cabaret"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.9"
dependencies = ["numpy", "astropy", "astroquery"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["black", "pytest"]
